Fixed overflow issues (fixes #286)

--- a/src/less/plyr.less
+++ b/src/less/plyr.less
@@ -19,8 +19,7 @@
     position: relative;
     max-width: 100%;
     min-width: 200px;
-    overflow: hidden;
-    font-family: Avenir, "Avenir Next", "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
+    font-family: @plyr-font-family;
     direction: ltr;
 
     & when (@plyr-border-box = true) {
