--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -11,9 +11,10 @@
 // Colors
 @plyr-color-main:                       #3498db;
 
-// Font sizes
-@plyr-font-size-small:                  14px;
-@plyr-font-size-base:                   16px;
+// Font
+@plyr-font-family:                      'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Avenir, 'Avenir Next', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
+@plyr-font-size-small:                  13px;
+@plyr-font-size-base:                   15px;
 
 // Captions
 @plyr-captions-bg:                      fade(#000, 70%);
