--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -13,6 +13,7 @@ $plyr-sr-only-important:                true !default;
 $plyr-color-main:                       #3498db !default;
 
 // Font sizes
+$plyr-font-family:                      'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Avenir, 'Avenir Next', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
 $plyr-font-size-small:                  14px !default;
 $plyr-font-size-base:                   16px !default;
 
